sample/asm/invalid_operand_types/idec.asm
.function: main
    function 1 main
    idec 1

    izero 0
    return
.end
